# matrix-multiplication

./: .gitignore  CMakeLists.txt  main.cpp
examples/: example.cpp
include/: matrix.h
src/: matrix.cpp
